--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ function compressImage(){
 
 <hr>
 
-<footer style="text-align:center; padding:10px;">
+<footer > style="text-align:center; padding:10px;">
   <a href="index.html">Home</a> |
   <a href="about.html">About</a> |
   <a href="contact.html">Contact</a> |
