--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <meta charset="UTF-8">
 <title>Image Compressor</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2205511579570420"
+<script async 
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2205511579570420"
 crossorigin="anonymous"></script>
-body{
+  <style>
+  body{
   font-family: Arial, sans-serif;
   background:#f4f4f4;
   display:flex;
   justify-content:center;
   align-items:center;
-  min-height:100vh;
-}
-.box{
+min-height:100vh;
+}.box{
   background:#fff;
   padding:20px;
   width:100%;
