--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <meta name="description" content="Free online image compressor tool">
 
 <!-- Google AdSense (same as before) -->
-<script async src="https://pagead2.googlesyndication.com
-     /pagead/js/adsbygoogle.js?client=ca-pub
-     -2205511579570420"
-     crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?
+client=ca-pub-6102520854593487"
+     crossorigin="anonymous"></script
 
 <style>
 body {
