--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Free online image compressor tool">
 
-<!-- Google AdSense (same as before) -->
-<script <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?
-client-ca-pub-2205511579570420"
-     crossorigin=anonymous"></script>
+<!-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com
+/pagead/js/adsbygoogle.js?client=ca-pub
+-2205511579570420"
+crossorigin="anonymous"></script>
 <style>
 body {
   font-family: Arial, sans-serif;
