--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
 <title>Image Compressor</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Free online image compressor tool">
-
-<!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com
-/pagead/js/adsbygoogle.js?client=ca-pub
--2205511579570420"
-crossorigin="anonymous"></script>
+<meta name="description" content="Free online image compressor tool"
+-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2205511579570420" 
+  crossorigin="anonymous"></script>
 <style>
 body {
   font-family: Arial, sans-serif;
