--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <!-- Google AdSense -->
   <meta name="google-adsense-account" content="ca-pub-2205511579570420">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2205511579570420"
+     crossorigin="anonymous"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
