--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+se<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -224,3 +224,16 @@ async function convertPDF() {
 
 </body>
 </html>
+<div style="max-width:800px;margin:40px auto;padding:20px;background:#fff;border-radius:8px;box-shadow:0 0 8px rgba(0,0,0,0.1);font-size:14px;line-height:1.6;">
+<h3>Important Note</h3>
+<p>
+All tools available on this website work directly in your browser.
+We do not upload, store, or share your files on any server.
+Your privacy and security are our top priority.
+</p>
+
+<p>
+This website provides free online tools for image and PDF processing.
+If you find our tools helpful, please share this website with your friends.
+</p>
+</div>
